--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 <p>This generator setups up a Slim Project including all needed configs to begin with developing and providing several grunt configs.</p>
 
+<p><strong>This project is based on the yeoman <a href="https://github.com/yeoman/generator-generator">generator-generator</a></strong></p>
+
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
@@ -65,6 +67,7 @@
 <li>Run: <code>yo slim</code>
 </li>
 <li>Run: `grunt</li>
+<li>Setup your Apache Webserver DocumentRoot to "public/"</li>
 </ul><h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
