Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <p><a href="https://travis-ci.org/katywings/generator-slim"><img src="https://secure.travis-ci.org/katywings/generator-slim.png" alt="Build Status"></a></p>
 
-<p>This generator setups up a Slim Project including all needed configs to begin with developing and providing several grunt configs.</p>
+<p>This generator sets up a Slim Project including all needed configs to begin with developing and providing several grunt configs.</p>
 
-<p><strong>This project is based on the yeoman <a href="https://github.com/yeoman/generator-generator">generator-generator</a></strong></p>
+<p><strong>This project is based on the yeoman <a href="https://github.com/yeoman/generator-generator">generator-generator</a>.</strong></p>
 
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
@@ -66,7 +66,8 @@
 </li>
 <li>Run: <code>yo slim</code>
 </li>
-<li>Run: `grunt</li>
+<li>Run: <code>grunt</code>
+</li>
 <li>Setup your Apache Webserver DocumentRoot to "public/"</li>
 </ul><h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
