Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 <a name="client-side" class="anchor" href="#client-side"><span class="octicon octicon-link"></span></a>Client Side</h3>
 
 <ul>
+<li>New: Jasmine Testing</li>
 <li>jQuery</li>
 <li>Underscore</li>
 <li>Moment</li>
@@ -201,6 +202,13 @@
 <a name="further-grunt-tasks" class="anchor" href="#further-grunt-tasks"><span class="octicon octicon-link"></span></a>Further Grunt Tasks</h2>
 
 <h3>
+<a name="jasmine-testing" class="anchor" href="#jasmine-testing"><span class="octicon octicon-link"></span></a>Jasmine testing</h3>
+
+<ul>
+<li>Create your Jasmine Tests in the folder <em>test/jasmine/</em>
+</li>
+<li>Run: <code>grunt test</code> to start the jasmine tests</li>
+</ul><h3>
 <a name="building-dist" class="anchor" href="#building-dist"><span class="octicon octicon-link"></span></a>Building dist</h3>
 
 <p>The generated distribution includes just the needed files and is as small as possible. </p>
@@ -218,6 +226,13 @@
 <a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>Changelog</h2>
 
 <ul>
+<li>
+<p>0.9.9</p>
+
+<ul>
+<li>Added Jasmine Testing</li>
+</ul>
+</li>
 <li>
 <p>0.9.8</p>
 
