Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
 
 <ul>
 <li>
+<p>0.10.5</p>
+
+<ul>
+<li>Bug: <code>grunt fetch</code> creates <em>lib Directory</em>, is fixed</li>
+</ul>
+</li>
+<li>
 <p>0.10.4</p>
 
 <ul>
