Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 
 <p><a href="https://travis-ci.org/katywings/generator-slim"><img src="https://secure.travis-ci.org/katywings/generator-slim.png" alt="Build Status"></a></p>
 
-<p>Maintainer: <a href="https://github.com/katywings">Katja Lutz</a></p>
+<p>Founder: <a href="https://github.com/katywings">Katja Lutz</a>,
+Maintainer: <em>wanted</em>,
+Delevopers: <em>wanted</em></p>
+
+<p><strong>This project needs several overhauls! And has a couple of bugs with the current Version of node.js</strong>
+<strong>If anyone has the interest to develop this project further, please contact me! I'm out of time.</strong></p>
 
 <p>This yeoman generator sets up a PHP Project including <a href="http://www.slimframework.com">Slim Framework</a>, all needed configs to begin with developing and several grunt tasks. Yes its a PHP Project Generator and automatically downloads composer and several php libs.</p>
 
