Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@ Delevopers: <em>wanted</em></p>
 
 <ul>
 <li>
+<p>0.10.6</p>
+
+<ul>
+<li>Bug: Installation with current version of yeoman not possible, is fixed</li>
+<li>Bug: Slim Framework Views are broken, is fixed</li>
+<li>Bug: DateTime Warning, is fixed</li>
+<li>Bug: Breadcrumbs broken with current Bootstrap Version, is fixed</li>
+</ul>
+</li>
+<li>
 <p>0.10.5</p>
 
 <ul>
