Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@ Delevopers: <em>wanted</em></p>
 
 <ul>
 <li>
+<p>0.11.0</p>
+
+<ul>
+<li>Whole cleanup of the generator code</li>
+</ul>
+</li>
+<li>
 <p>0.10.6</p>
 
 <ul>
