Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ Delevopers: <em>wanted</em></p>
 <ul>
 <li>Make sure you have <a href="https://github.com/yeoman/yo">yo</a> installed: <code>npm install -g yo</code>
 </li>
+<li>Install <a href="https://getcomposer.org/doc/00-intro.md#globally">composer</a> global on your machine</li>
 <li>Install the generator: <code>npm install -g generator-slim</code>
 </li>
 <li>Run: <code>yo slim</code>
@@ -222,7 +223,7 @@ Delevopers: <em>wanted</em></p>
 </ul><h3>
 <a name="building-dist" class="anchor" href="#building-dist"><span class="octicon octicon-link"></span></a>Building dist</h3>
 
-<p>The generated distribution includes just the needed files and is as small as possible. </p>
+<p>The generated distribution includes just the needed files and is as small as possible.</p>
 
 <ul>
 <li>Run: <code>grunt dist</code> to generate the dist</li>
@@ -239,10 +240,22 @@ Delevopers: <em>wanted</em></p>
 
 <ul>
 <li>
+<p>0.11.1</p>
+
+<ul>
+<li>Tested on Mac OS X 10.9.2 <a href="https://github.com/katywings">katywings</a>
+</li>
+<li>Updated several composer dependencies</li>
+<li>Bug: Changed RedBean dependency to 3.5, because 4.* isn't compatible to composer <a href="https://github.com/twocabbages">twocabbages</a>
+</li>
+</ul>
+</li>
+<li>
 <p>0.11.0</p>
 
 <ul>
-<li>Whole cleanup of the generator code</li>
+<li>Whole cleanup of the generator code by <a href="https://github.com/hariadi">hariadi</a>
+</li>
 </ul>
 </li>
 <li>
